# cpp-dummies

./: .gitignore  Makefile.am  README.md  configure.ac  groups  project.config
src/: Makefile.am
src/chap01/: Makefile.am  conversion.cpp
src/chap02/: .gitignore  Makefile.am  dblavg.cpp  intavg.cpp
src/chap03/: Makefile.am
