AC_INIT([cpp-dummies], [0.1], [EdSG@users.noreply.github.com])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign no-dist no-installman no-installinfo subdir-objects -Wall -Werror])
AC_PROG_CC
AC_PROG_CXX
AC_LANG([C++])
AC_GNU_SOURCE
AX_CXX_COMPILE_STDCXX_11
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/chap01/Makefile
])
AC_OUTPUT
